# genes

./: .gitignore  README.md  setup.cfg
.github/workflows/: pythonapp.yml
genes/: __init__.py
genes/genalg/: api.py  factory.py
genes/genotype/: creature.py  fitness_function.py  phenotype.py  population.py
genes/genotype/operatord/: crossover.py  mutation.py
genes/genotype/phenotyped/: factory.py
genes/genotype/populationd/: factory.py
genes/stats/: in_memory.py
genes/v04/: genes.py  genes_config.py
genes/v04/factories/: generation_factory.py  genotype_factory.py
genes/v04/gmodule/: fitness_function.py  generation.py  genotype.py  individual.py  operator.py
genes/v04/gmodule/operators/: crossover.py  crossover_method.py  mutation.py  selection.py
genes/v04/gmodule/operators/crossover_methods/: mono.py  poly.py
genes/v04/stats/: generation_stats.py
tests/genalg/: test_api.py
tests/genotype/: test_creature.py  test_crossover.py  test_mutation.py  test_phenotype.py  test_selection.py
tests/v04/gmodule/: generation_test.py  genotype_test.py
tests/v04/gmodule/operators/: mutation_test.py  selection_test.py
