[metadata]
name = genes
version = 0.3
author = Åukasz Bacik
author_email = mail@luka.sh
license = GPLv3
url = https://github.com/lbacik/genes
requires_python = >=3.7
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python

[options]
package_dir=
    =genes
packages=find:
#install_requires =

[options.packages.find]
where=genes
